Add register style

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,3 +2,23 @@
     width: 4rem;
     height: 6rem;
 }
+
+.principal-register {
+    width: 4rem;
+    height: 6rem;
+}
+
+.principal-title {
+    width: 4rem;
+    height: 6rem;
+}
+
+.principal-aside {
+    width: 4rem;
+    height: 6rem;
+}
+
+.principal-navbar {
+    width: 4rem;
+    height: 6rem;
+}
